fix width of gallery on mobile

--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,6 @@ img { max-width: 100%; }
 
 .gallery {
 	max-width: 1000px;
-	min-width: 400px;
 }
 
 .gallery img {
